# Beta-Launcher

./: .anjuta_sym_db.db  .gitignore  AUTHORS  Beta-Launcher  Beta-Launcher.desktop  Beta_Launcher.conf  ChangeLog  DebianBuildScript  Install.sh  Launcher.sh  NEWS  PKGBUILD  README  README.md  Remove.sh  UnrealEngine.desktop  beta-launcher  beta-launcher-0.2-1.deb  beta-launcher-0.2_1-1-any.pkg.tar.xz  beta-launcher-0.3-1-any.pkg.tar.xz  beta-launcher-0.3-1.deb  beta-launcher-0.4-1-any.pkg.tar.xz  beta-launcher-0.4-1.deb  beta-launcher-0.4-1.noarch.rpm  beta-launcher.desktop  configure.ac  control  copyright  defaults.conf  index.html  params.json  settings.conf
.anjuta/session/: anjuta.session  dock-layout.xml
src/: .Beta_Luncher.conf  Beta_Launcher.conf  Makefile.am  copy.sh  fct.py  fct.py~  launcher.py  launcher.py~  launcher.ui
